[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/end/crewmate.png" type="Texture" id=1]
[ext_resource path="res://assets/intro/quit.png" type="Texture" id=2]
[ext_resource path="res://assets/end/defeated.png" type="Texture" id=3]
[ext_resource path="res://assets/end/play_again.png" type="Texture" id=4]
[ext_resource path="res://assets/end/shinji.jpg" type="Texture" id=5]
[ext_resource path="res://scenes/end_screen.gd" type="Script" id=6]
[ext_resource path="res://assets/music/impostorwin.mp3" type="AudioStream" id=7]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -26.0
margin_top = -40.0
margin_right = 247.0
margin_bottom = 341.0
color = Color( 0, 0, 0, 1 )

[node name="Crewmate" type="Sprite" parent="."]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
position = Vector2( 113, 161 )
scale = Vector2( 0.0578829, 0.0578704 )
texture = ExtResource( 1 )

[node name="Shinji" type="Sprite" parent="."]
modulate = Color( 0.552941, 0.541176, 0.541176, 1 )
position = Vector2( 115, 273 )
scale = Vector2( 0.106667, 0.116304 )
texture = ExtResource( 5 )

[node name="again_btn" type="Button" parent="."]
margin_left = 34.0
margin_top = 212.0
margin_right = 107.0
margin_bottom = 243.0
flat = true

[node name="quit_btn" type="Button" parent="."]
margin_left = 136.0
margin_top = 218.0
margin_right = 190.0
margin_bottom = 238.0
flat = true

[node name="Quit" type="Sprite" parent="."]
position = Vector2( 163, 228 )
scale = Vector2( 0.164407, 0.134409 )
texture = ExtResource( 2 )

[node name="Defeated" type="Sprite" parent="."]
position = Vector2( 114, 103 )
scale = Vector2( 0.235502, 0.351064 )
texture = ExtResource( 3 )

[node name="PlayAgain" type="Sprite" parent="."]
position = Vector2( 69, 228 )
scale = Vector2( 0.185385, 0.153077 )
texture = ExtResource( 4 )

[node name="pacman_die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="again_btn" to="." method="_on_again_btn_pressed"]
[connection signal="pressed" from="quit_btn" to="." method="_on_quit_btn_pressed"]
